[tool.poetry]
name = "hw3_romaniuk"
version = "0.1.0"
description = ""
authors = ["romaniuk-o <O.romaniuk54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
